[project]
name = "budget-falcon"
version = "0.1.0"
description = ""
authors = [
    {name = "PLAY, inc."}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3 (>=1.38.21,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "slack-sdk (>=3.35.0,<4.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "google-auth (>=2.40.2,<3.0.0)",
    "google-api-python-client (>=2.169.0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
